// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a subscript text to match snapshot 1`] = `
<div
  className="sc-bdfCDU FxXNY"
  role="text"
>
  H
  <div
    className="sc-bdfCDU hVEnQK"
    role="text"
  >
    <sup>
      2
    </sup>
  </div>
  O
</div>
`;

exports[`should render a superscript text to match snapshot 1`] = `
<div
  className="sc-bdfCDU FxXNY"
  role="text"
>
  H
  <div
    className="sc-bdfCDU hVEnQK"
    role="text"
  >
    <sup>
      2
    </sup>
  </div>
  O
</div>
`;

exports[`should render one truncated text line to match snapshot 1`] = `
<div
  className="sc-bdfCDU hXOWac"
  role="text"
>
  <div>
    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.
  </div>
</div>
`;

exports[`text to match snapshot 1`] = `
<div
  className="sc-bdfCDU dxpfnQ"
  role="text"
>
  Some text here
</div>
`;
